# neural-stack

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/.agents/: module_planning_agent_prompt.md  neural_stack_project_agent.md
.claude/agents/: module-planning-agent.md  neural-stack-mentor.md
.claude/skills/neural-stack-practical-review/: SKILL.md
.github/ISSUE_TEMPLATE/: weekly-practical.md
configs/: vit_cifar10.yaml  vit_fgvcaircraft.yaml  vit_fgvcaircraft_transfer.yaml
course-docs/: 00_programme_overview.md
course_docs/: module_1_vision_transformers.md
neural-stack/: attention.py
neural_stack/: __init__.py  utils.py  vision_transformer.py  visualization.py
neural_stack/models/: vision_transformer.py
neural_stack/training/: __init__.py  callbacks.py  config.py  data.py  factory.py  schedulers.py  trainer.py
notebooks/: transformer_fundamentals.ipynb  vision_transformers.ipynb  vit_training_methods.ipynb
