[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-stack"
version = "0.1.0"
description = "A learning project for transformer fundamentals and neural network implementations"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "pandas>=2.0.0",
    "torchvision>=0.15.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "plotly>=5.0.0",
    "fvcore>=0.1.5",
]

[project.optional-dependencies]
dev = [
    "jupyter",
]

[tool.setuptools]
packages = ["neural_stack"]
